Updated raspi-monitor script with additional help text

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 # Script deployment path
-rpi_monitor_script: /usr/local/sbin/raspi-monitor.sh
+rpi_monitor_script: /usr/local/sbin/raspi-monitor
 
 # The name of the service to be restarted
 zabbix_agent_service: zabbix-agent
