--- a/tasks/sudoers.yml
+++ b/tasks/sudoers.yml
@@ -1,17 +1,16 @@
 ---
-- name: Add zabbix scripts into sudoers file
+- name: Add scripts into sudoers file
   lineinfile:
     path: /etc/sudoers
     state: present
-    regexp: "^Cmnd_Alias      ZABBIX_CMDS="
+    regexp: "^Cmnd_Alias      RPI_CMDS="
     insertafter: "Defaults"
-    line: "Cmnd_Alias      ZABBIX_CMDS={{ zabbix_user_sudoers_scripts }}"
+    line: "Cmnd_Alias      RPI_CMDS={{ user_sudoers_scripts }}"
     validate: "/usr/sbin/visudo -cf %s"
   become: true
   become_user: root
   tags:
     - configure
-    - zabbix-agent
     - sudoers
 
 - name: Add zabbix user into sudoers to be able run zabbix scripts as root without password
@@ -20,7 +19,7 @@
     state: present
     regexp: "^zabbix"
     insertafter: "# User alias"
-    line: "zabbix ALL=(ALL) NOPASSWD: ZABBIX_CMDS"
+    line: "zabbix ALL=(ALL) NOPASSWD: RPI_CMDS"
     validate: "/usr/sbin/visudo -cf %s"
   become: true
   become_user: root
